# mpc-guided

./: .dstackignore  .gitignore  README.md  build_dataset.py  build_pickcube_video_dataset.py  demo.py  dstack.yml  main.py  play.py  play_bc.py  play_bc_baseline.py  pyproject.toml  train.py  train_bc.py  train_bc_baseline.py  train_dynamics.py
.claude/: CLAUDE.md  settings.json
legacy/: demo.py  train_dynamics.py
src/: backbone.py  networks.py  observations.py  rollout.py  utils.py
src/actor/: __init__.py  actor.py  config.py  forward.py  model.py  stochastic.py  temporal.py  training.py
src/bc/: __init__.py  dataset.py
src/buffer/: __init__.py  online.py
src/datasets/: __init__.py  builder.py  expert_transitions.py  expert_videos.py  video_pairs.py
src/dynamics/: __init__.py  buffer.py  episode_store.py  model.py  rollout_accumulator.py  training.py
src/legacy/: rollout.py  utils.py
src/legacy/actor/: __init__.py  model.py  training.py
src/legacy/datasets/: expert_transitions.py  video_pairs.py
src/legacy/dynamics/: __init__.py  episode_store.py  model.py  rollout_accumulator.py  training.py
tests/: conftest.py  test_actor_model.py  test_buffer.py  test_dataset_env_alignment.py  test_dataset_replay.py  test_dataset_validity.py  test_dynamics_model.py  test_dynamics_training.py  test_episode_store.py  test_expert_action_replay.py  test_rollout_accumulator.py
tests/legacy/: conftest.py  test_dynamics_model.py  test_dynamics_training.py  test_episode_store.py  test_observations.py  test_rollout_accumulator.py
